added multi cities func for extension for the data

--- a/src/run_models/run_mlp/run_baseline_mlp_2017.ipynb
+++ b/src/run_models/run_mlp/run_baseline_mlp_2017.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,30 @@
     "\n",
     "# for loss.py and also naming of file names\n",
     "LOSS_FUNC = \"MSE\" # choose from the above list\n",
-    "NN_TYPE = \"MLP\" "
+    "NN_TYPE = \"MLP\" \n",
+    "CITY = 'Utrecht' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if CITY == 'Utrecht':\n",
+    "    idx_dict = UTRECHT_IDX\n",
+    "    station_names = ['tuindorp', 'breukelen']\n",
+    "    main_station = 'breuklen'\n",
+    "elif CITY == 'Amsterdam':\n",
+    "    idx_dict = AMSTERDAM_IDX\n",
+    "    station_names = ['oudemeer', 'haarlem']\n",
+    "    main_station = 'haarlem'\n",
+    "elif CITY == 'Multi':\n",
+    "    idx_dict = MULTI_STATION_IDX\n",
+    "    station_names = ['tuindorp', 'breukelen', 'zegveld', 'oudemeer', 'kantershof']\n",
+    "    main_station = 'breukeln'\n",
+    "else:\n",
+    "    raise ValueError(\"CITY must be 'Utrecht', 'Amsterdam', or 'Multi'.\")"
    ]
   },
   {
@@ -731,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -757,140 +780,12 @@
     "print(\"wind speed (fh) idx: \", column_names.index('FH'))\n",
     "\n",
     "# check if the indices are the same as whats defined in config.py\n",
-    "assert column_names.index('NO2_TUINDORP')== NO2_TUINDORP_IDX\n",
-    "assert column_names.index('NO2_BREUKELEN') == NO2_BREUKELEN_IDX\n",
-    "assert column_names.index('DD') == WIND_DIR_IDX\n",
-    "assert column_names.index('FH') == WIND_SPEED_IDX\n",
+    "assert column_names.index('NO2_TUINDORP')== idx_dict[f\"NO2_TUINDORP_IDX\"]\n",
+    "assert column_names.index('NO2_BREUKELEN') == idx_dict[f\"NO2_BREUKELEN_IDX\"]\n",
+    "assert column_names.index('DD') == idx_dict[f\"WIND_DIR_IDX\"]\n",
+    "assert column_names.index('FH') == idx_dict[f\"WIND_SPEED_IDX\"]\n",
     "print(\"Column indices are same as config.py\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DateTime\n",
-       "2017-08-01 00:00:00    0.242115\n",
-       "2017-08-01 01:00:00    0.223158\n",
-       "2017-08-01 02:00:00    0.165911\n",
-       "2017-08-01 03:00:00    0.142363\n",
-       "2017-08-01 04:00:00    0.156297\n",
-       "                         ...   \n",
-       "2017-11-16 19:00:00    0.523871\n",
-       "2017-11-16 20:00:00    0.512314\n",
-       "2017-11-16 21:00:00    0.232880\n",
-       "2017-11-16 22:00:00    0.108123\n",
-       "2017-11-16 23:00:00    0.205120\n",
-       "Name: NO2_TUINDORP, Length: 2592, dtype: float64"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset.u[0].iloc[:,NO2_TUINDORP_IDX]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DateTime\n",
-       "2017-08-01 00:00:00    0.223698\n",
-       "2017-08-01 01:00:00    0.145496\n",
-       "2017-08-01 02:00:00    0.275978\n",
-       "2017-08-01 03:00:00    0.423742\n",
-       "2017-08-01 04:00:00    0.478721\n",
-       "                         ...   \n",
-       "2017-11-16 19:00:00    0.606502\n",
-       "2017-11-16 20:00:00    0.456470\n",
-       "2017-11-16 21:00:00    0.483258\n",
-       "2017-11-16 22:00:00    0.468784\n",
-       "2017-11-16 23:00:00    0.473428\n",
-       "Name: NO2_BREUKELEN, Length: 2592, dtype: float64"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset.u[0].iloc[:,NO2_BREUKELEN_IDX]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DateTime\n",
-       "2017-08-01 00:00:00    0.166667\n",
-       "2017-08-01 01:00:00    0.000000\n",
-       "2017-08-01 02:00:00    0.000000\n",
-       "2017-08-01 03:00:00    0.277778\n",
-       "2017-08-01 04:00:00    0.805556\n",
-       "                         ...   \n",
-       "2017-11-16 19:00:00    0.750000\n",
-       "2017-11-16 20:00:00    0.972222\n",
-       "2017-11-16 21:00:00    0.888889\n",
-       "2017-11-16 22:00:00    0.944444\n",
-       "2017-11-16 23:00:00    0.861111\n",
-       "Name: DD, Length: 2592, dtype: float64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset.u[0].iloc[:,WIND_DIR_IDX]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DateTime\n",
-       "2017-08-01 00:00:00    0.111111\n",
-       "2017-08-01 01:00:00    0.111111\n",
-       "2017-08-01 02:00:00    0.000000\n",
-       "2017-08-01 03:00:00    0.000000\n",
-       "2017-08-01 04:00:00    0.111111\n",
-       "                         ...   \n",
-       "2017-11-16 19:00:00    0.333333\n",
-       "2017-11-16 20:00:00    0.333333\n",
-       "2017-11-16 21:00:00    0.222222\n",
-       "2017-11-16 22:00:00    0.111111\n",
-       "2017-11-16 23:00:00    0.222222\n",
-       "Name: FH, Length: 2592, dtype: float64"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_dataset.u[0].iloc[:,WIND_SPEED_IDX]"
    ]
   },
   {
@@ -945,7 +840,8 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, device=device, trial = trial)\n",
+    "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], \n",
+    "                                        device=device, idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
@@ -1065,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1201,7 +1097,8 @@
     "val_loader = DataLoader(val_dataset, batch_size=best_params[\"batch_size\"], shuffle=False)\n",
     "\n",
     "# Train the model\n",
-    "_, training_time, train_losses, val_losses = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], device=device)\n",
+    "_, training_time, train_losses, val_losses = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], \n",
+    "                                                                             device=device, idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
