--- a/src/run_models/run_mlp/run_mlp_linear_allyears.ipynb
+++ b/src/run_models/run_mlp/run_mlp_linear_allyears.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
        "PosixPath('/home/rachel/forecasting_smog_PEML/src')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "<module 'config' from '/home/rachel/forecasting_smog_PEML/src/config.py'>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,8 +208,32 @@
     "VAL_YEARS = [2021, 2022, 2023]\n",
     "TEST_YEARS = [2021, 2022, 2023]\n",
     "\n",
-    "LOSS_FUNC = \"LinearShift_MSE\"\n",
-    "NN_TYPE = \"MLP\" "
+    "# for loss.py and also naming of file names\n",
+    "LOSS_FUNC = \"LinearShift_MSE\" # choose from the above list\n",
+    "NN_TYPE = \"MLP\" \n",
+    "CITY = 'Utrecht' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if CITY == 'Utrecht':\n",
+    "    idx_dict = UTRECHT_IDX\n",
+    "    station_names = ['tuindorp', 'breukelen']\n",
+    "    main_station = 'breuklen'\n",
+    "elif CITY == 'Amsterdam':\n",
+    "    idx_dict = AMSTERDAM_IDX\n",
+    "    station_names = ['oudemeer', 'haarlem']\n",
+    "    main_station = 'haarlem'\n",
+    "elif CITY == 'Multi':\n",
+    "    idx_dict = MULTI_STATION_IDX\n",
+    "    station_names = ['tuindorp', 'breukelen', 'zegveld', 'oudemeer', 'kantershof']\n",
+    "    main_station = 'breukeln'\n",
+    "else:\n",
+    "    raise ValueError(\"CITY must be 'Utrecht', 'Amsterdam', or 'Multi'.\")"
    ]
   },
   {
@@ -231,8 +255,8 @@
      "output_type": "stream",
      "text": [
       "Using all years\n",
-      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years/pollutants_minmax_allyears.csv\n",
-      "DATASET_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/all_years\n",
+      "MINMAX_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/Utrecht/all_years/pollutants_minmax_allyears.csv\n",
+      "DATASET_PATH:  /home/rachel/forecasting_smog_PEML/data/data_combined/Utrecht/all_years\n",
       "MODEL_PATH_NAME:  best_MLP_no2_LinearShift_MSE_allyears.pth\n",
       "RESULTS_METRICS_FILENAME:  results_MLP_no2_LinearShift_MSE_allyears.csv\n",
       "BESTPARAMS_FILENAME:  best_params_MLP_no2_LinearShift_MSE_allyears.txt\n",
@@ -286,7 +310,13 @@
      "output_type": "stream",
      "text": [
       "Imported train_2017_combined_u.csv\n",
-      "Imported train_2018_combined_u.csv\n",
+      "Imported train_2018_combined_u.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Imported train_2020_combined_u.csv\n",
       "Imported train_2021_combined_u.csv\n",
       "Imported train_2022_combined_u.csv\n",
@@ -313,13 +343,7 @@
       "Warning: test_2018_combined_u.csv does not exist.\n",
       "Warning: test_2020_combined_u.csv does not exist.\n",
       "Imported test_2021_combined_u.csv\n",
-      "Imported test_2022_combined_u.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Imported test_2022_combined_u.csv\n",
       "Imported test_2023_combined_u.csv\n",
       "Warning: test_2017_combined_y.csv does not exist.\n",
       "Warning: test_2018_combined_y.csv does not exist.\n",
@@ -1070,10 +1094,10 @@
     "print(\"wind speed (fh) idx: \", column_names.index('FH'))\n",
     "\n",
     "# check if the indices are the same as whats defined in config.py\n",
-    "assert column_names.index('NO2_TUINDORP')== NO2_TUINDORP_IDX\n",
-    "assert column_names.index('NO2_BREUKELEN') == NO2_BREUKELEN_IDX\n",
-    "assert column_names.index('DD') == WIND_DIR_IDX\n",
-    "assert column_names.index('FH') == WIND_SPEED_IDX\n",
+    "assert column_names.index('NO2_TUINDORP')== idx_dict[f\"NO2_TUINDORP_IDX\"]\n",
+    "assert column_names.index('NO2_BREUKELEN') == idx_dict[f\"NO2_BREUKELEN_IDX\"]\n",
+    "assert column_names.index('DD') == idx_dict[f\"WIND_DIR_IDX\"]\n",
+    "assert column_names.index('FH') == idx_dict[f\"WIND_SPEED_IDX\"]\n",
     "print(\"Column indices are same as config.py\")\n",
     "\n"
    ]
@@ -1107,7 +1131,7 @@
     }
    ],
    "source": [
-    "train_dataset.u[0].iloc[:,NO2_TUINDORP_IDX]"
+    "train_dataset.u[0].iloc[:,idx_dict[f\"NO2_TUINDORP_IDX\"]]"
    ]
   },
   {
@@ -1119,18 +1143,18 @@
      "data": {
       "text/plain": [
        "DateTime\n",
-       "2017-08-01 00:00:00    0.207556\n",
-       "2017-08-01 01:00:00    0.140351\n",
-       "2017-08-01 02:00:00    0.252483\n",
-       "2017-08-01 03:00:00    0.379467\n",
-       "2017-08-01 04:00:00    0.426715\n",
+       "2017-08-01 00:00:00    0.223383\n",
+       "2017-08-01 01:00:00    0.207092\n",
+       "2017-08-01 02:00:00    0.157895\n",
+       "2017-08-01 03:00:00    0.137659\n",
+       "2017-08-01 04:00:00    0.149633\n",
        "                         ...   \n",
-       "2017-12-30 19:00:00    0.201615\n",
-       "2017-12-30 20:00:00    0.217859\n",
-       "2017-12-30 21:00:00    0.221480\n",
-       "2017-12-30 22:00:00    0.209505\n",
-       "2017-12-30 23:00:00    0.240787\n",
-       "Name: NO2_BREUKELEN, Length: 3648, dtype: float64"
+       "2017-12-30 19:00:00    0.168848\n",
+       "2017-12-30 20:00:00    0.140072\n",
+       "2017-12-30 21:00:00    0.191033\n",
+       "2017-12-30 22:00:00    0.147406\n",
+       "2017-12-30 23:00:00    0.158823\n",
+       "Name: NO2_TUINDORP, Length: 3648, dtype: float64"
       ]
      },
      "execution_count": 20,
@@ -1139,7 +1163,7 @@
     }
    ],
    "source": [
-    "train_dataset.u[0].iloc[:,NO2_BREUKELEN_IDX]"
+    "train_dataset.u[0].iloc[:,idx_dict[f\"NO2_TUINDORP_IDX\"]]"
    ]
   },
   {
@@ -1171,7 +1195,7 @@
     }
    ],
    "source": [
-    "train_dataset.u[0].iloc[:,WIND_DIR_IDX]"
+    "train_dataset.u[0].iloc[:,idx_dict[f\"WIND_DIR_IDX\"]]"
    ]
   },
   {
@@ -1203,7 +1227,7 @@
     }
    ],
    "source": [
-    "train_dataset.u[0].iloc[:,WIND_SPEED_IDX]"
+    "train_dataset.u[0].iloc[:,idx_dict[f\"WIND_SPEED_IDX\"]]"
    ]
   },
   {
@@ -1279,7 +1303,8 @@
     "\n",
     "    # Train and return validation loss\n",
     "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, \n",
-    "                                    weight_decay=weight_decay, lambda_phy=lambda_phy, device=device, trial=trial)\n",
+    "                                    weight_decay=weight_decay, lambda_phy = lambda_phy, device=device, trial = trial, \n",
+    "                                    idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "    \n",
     "    return val_loss\n",
     "\n",
@@ -1309,13 +1334,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File path:  /home/rachel/forecasting_smog_PEML/src/results/best_params/best_params_MLP_no2_LinearShift_MSE_allyears.txt\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
-    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\""
+    "file_path = f\"{RESULTS_PATH}/best_params/{BESTPARAMS_FILENAME}\"\n",
+    "print(\"File path: \", file_path)"
    ]
   },
   {
@@ -1330,15 +1364,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Hyperparameters saved to /home/rachel/forecasting_smog_PEML/src/results/best_params/best_params_MLP_no2_LinearShift_MSE_allyears.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(file_path, \"w\") as f:\n",
     "    json.dump(best_params, f, indent=4)  # Pretty format for readability\n",
@@ -1355,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1402,12 +1428,14 @@
     "val_loader = DataLoader(val_dataset, batch_size=best_params[\"batch_size\"], shuffle=False)\n",
     "\n",
     "# Train the model\n",
-    "_, training_time, train_losses, val_losses = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params[\"lambda_phy\"], device=device)\n",
+    "_, training_time, train_losses, val_losses = best_model_baseline.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], \n",
+    "                                                                    weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params['lambda_phy'], device=device, \n",
+    "                                                                    idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
-    "torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
-    "print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
+    "# torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
+    "# print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
    ]
   },
   {
