added pinn multi too

--- a/src/run_mlp_linear_allyears_multi.ipynb
+++ b/src/run_mlp_linear_allyears_multi.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
     "elif CITY == 'Multi':\n",
     "    idx_dict = MULTI_STATION_IDX\n",
     "    station_names = ['tuindorp', 'breukelen', 'zegveld', 'oudemeer', 'kantershof']\n",
-    "    main_station = 'breukeln'\n",
+    "    main_station = 'breukelen'\n",
     "else:\n",
     "    raise ValueError(\"CITY must be 'Utrecht', 'Amsterdam', or 'Multi'.\")"
    ]
