found mistake for calculating mse, fixed and edited mse scores for all csv

--- a/src/run_baseline_gru_allyears.ipynb
+++ b/src/run_baseline_gru_allyears.ipynb
@@ -31,6 +31,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "71.19246277370884"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8.43756260858009 ** 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ results_MLP_no2_MSE_allyears_Amsterdam.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_PDE_nmer_const_allyears_Amsterdam.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_LinearShift_MSE_allyears_Amsterdam.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_PINN_allyears_Amsterdam.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_PDE_nmer_piece_allyears_Amsterdam.csv passed RMSE check.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check if all results rmse are sqrt of mse\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import glob\n",
+    "import os\n",
+    "\n",
+    "from pathlib import Path\n",
+    "BASE_DIR = Path.cwd().parents[0] # set it to the root directory of the project, not src\n",
+    "\n",
+    "RESULTS_PATH = BASE_DIR / \"src\" / \"results\"\n",
+    "\n",
+    "\n",
+    "# Set the folder containing your CSV result files\n",
+    "results_folder = RESULTS_PATH/'Amsterdam' # Replace with your actual folder path\n",
+    "csv_files = glob.glob(os.path.join(results_folder, \"*.csv\"))\n",
+    "\n",
+    "if not csv_files:\n",
+    "    print(\"No CSV files found.\")\n",
+    "else:\n",
+    "    for file in csv_files:\n",
+    "        try:\n",
+    "            df = pd.read_csv(file)\n",
+    "            if \"MSE\" not in df.columns or \"RMSE\" not in df.columns:\n",
+    "                print(f\"❌ Skipping {file} — missing 'MSE' or 'RMSE' columns.\")\n",
+    "                continue\n",
+    "\n",
+    "            df[\"RMSE_computed\"] = np.sqrt(df[\"MSE\"])\n",
+    "            df[\"match\"] = np.isclose(df[\"RMSE\"], df[\"RMSE_computed\"], rtol=1e-5)\n",
+    "\n",
+    "            mismatches = df[~df[\"match\"]]\n",
+    "            if not mismatches.empty:\n",
+    "                print(f\"⚠️ Mismatches in {os.path.basename(file)}:\")\n",
+    "                print(mismatches[[\"MSE\", \"RMSE\", \"RMSE_computed\"]])\n",
+    "            else:\n",
+    "                print(f\"✅ {os.path.basename(file)} passed RMSE check.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Error processing {file}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
