updated compare results notebook and experimenting with new pde func

--- a/src/run_baseline_gru_allyears.ipynb
+++ b/src/run_baseline_gru_allyears.ipynb
@@ -31,38 +31,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "71.19246277370884"
+       "46.48976697096734"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "8.43756260858009 ** 2"
+    "6.818340485115666 ** 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ results_MLP_no2_MSE_allyears_Amsterdam.csv passed RMSE check.\n",
-      "✅ results_MLP_no2_PDE_nmer_const_allyears_Amsterdam.csv passed RMSE check.\n",
-      "✅ results_MLP_no2_LinearShift_MSE_allyears_Amsterdam.csv passed RMSE check.\n",
-      "✅ results_MLP_no2_PINN_allyears_Amsterdam.csv passed RMSE check.\n",
-      "✅ results_MLP_no2_PDE_nmer_piece_allyears_Amsterdam.csv passed RMSE check.\n"
+      "✅ results_MLP_no2_PDE_nmer_const_allyears_Multi.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_PDE_nmer_piece_allyears_Multi.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_PINN_allyears_Multi.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_LinearShift_MSE_allyears_Multi.csv passed RMSE check.\n",
+      "✅ results_MLP_no2_MSE_allyears_Multi.csv passed RMSE check.\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "\n",
     "\n",
     "# Set the folder containing your CSV result files\n",
-    "results_folder = RESULTS_PATH/'Amsterdam' # Replace with your actual folder path\n",
+    "results_folder = RESULTS_PATH/'Multi'/'metrics' # Replace with your actual folder path\n",
     "csv_files = glob.glob(os.path.join(results_folder, \"*.csv\"))\n",
     "\n",
     "if not csv_files:\n",
