changed pinn loss to experiment

--- a/src/run_baseline_mlp_allyears_multi.ipynb
+++ b/src/run_baseline_mlp_allyears_multi.ipynb
@@ -41,13 +41,7 @@
      "text": [
       "Starting script...\n",
       "\n",
-      "Running __init__.py for data pipeline...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running __init__.py for data pipeline...\n",
       "Modelling package initialized\n",
       "\n"
      ]
@@ -635,15 +629,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params['lr'] = 3e-5"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -677,8 +662,8 @@
     "\n",
     "print(f\"Training time: {training_time}\")\n",
     "# # # Save the trained model\n",
-    "torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
-    "print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
+    "# torch.save(best_model_baseline.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
+    "# print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
    ]
   },
   {
