new results from GRU multi PINN and baseline

--- a/src/run_mlp_pinn_allyears_multi.ipynb
+++ b/src/run_mlp_pinn_allyears_multi.ipynb
@@ -697,8 +697,6 @@
     "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-8, 1e-3)\n",
     "    lambda_phy = trial.suggest_loguniform(\"lambda_phy\", 1e-5, 1e-1)\n",
     "    lambda_ic = trial.suggest_loguniform(\"lambda_ic\", 1e-5, 1e-1)\n",
-    "    D = trial.suggest_uniform(\"D\", 0.01, 1.0)      # Diffusion coefficient\n",
-    "    k = trial.suggest_uniform(\"k\", 0.01, 1.0)      # Source scaling (if used in S(x,y,t))\n",
     "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32, 64])\n",
     "\n",
     "    # Data loaders\n",
@@ -720,8 +718,6 @@
     "        lr=lr, weight_decay=weight_decay,\n",
     "        lambda_phy=lambda_phy,\n",
     "        lambda_ic=lambda_ic,\n",
-    "        D=D,\n",
-    "        k=k,\n",
     "        device=device,\n",
     "        trial=trial,\n",
     "        idx_dict=idx_dict,\n",
@@ -850,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +975,7 @@
     "\n",
     "# Train the model\n",
     "_, training_time, train_losses, val_losses = best_model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], \n",
-    "                                                                    weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params['lambda_phy'], device=device, \n",
+    "                                                                    weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params['lambda_phy'], lambda_ic= best_params['lambda_ic'],device=device, \n",
     "                                                                    idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
