minor changes to results

--- a/src/run_gru_pinn_allyears_multi.ipynb
+++ b/src/run_gru_pinn_allyears_multi.ipynb
@@ -293,13 +293,7 @@
       "Warning: val_2017_combined_u.csv does not exist.\n",
       "Warning: val_2018_combined_u.csv does not exist.\n",
       "Warning: val_2020_combined_u.csv does not exist.\n",
-      "Imported val_2021_combined_u.csv\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Imported val_2021_combined_u.csv\n",
       "Imported val_2022_combined_u.csv\n",
       "Imported val_2023_combined_u.csv\n",
       "Warning: val_2017_combined_y.csv does not exist.\n",
@@ -460,7 +454,7 @@
     "    weight_decay = trial.suggest_loguniform(\"weight_decay\", 1e-8, 1e-3)\n",
     "    batch_size = trial.suggest_categorical(\"batch_size\", [8, 16, 32, 64])  # Match the original hp['batch_sz']\n",
     "    lambda_phy = trial.suggest_loguniform(\"lambda_phy\", 1e-5, 1e-1)\n",
-    "    lambda_ic = trial.suggest_loguniform(\"lambda_ic\", 1e-5, 1e-1)\n",
+    "    # lambda_ic = trial.suggest_loguniform(\"lambda_ic\", 1e-5, 1e-1)\n",
     "\n",
     "    # Create train & validation loaders (following the original code)\n",
     "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
@@ -482,7 +476,7 @@
     "        train_loader, val_loader, epochs=50,\n",
     "        lr=lr, weight_decay=weight_decay,\n",
     "        lambda_phy=lambda_phy,\n",
-    "        lambda_ic=lambda_ic,\n",
+    "        # lambda_ic=lambda_ic,\n",
     "        device=device,\n",
     "        trial=trial,\n",
     "        idx_dict=idx_dict,\n",
@@ -576,32 +570,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded Best Parameters: {'n_hidden_layers': 4, 'n_hidden_units': 200, 'lr': 3.138969533841802e-05, 'weight_decay': 1.071724200384772e-08, 'batch_size': 8, 'lambda_phy': 2.009107432895544e-05, 'lambda_ic': 4.171062569370642e-05}\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "with open(file_path, \"r\") as f:\n",
     "    best_params = json.load(f)  # Automatically converts it to a dictionary\n",
     "\n",
     "print(\"Loaded Best Parameters:\", best_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params = {\n",
-    "    \"n_hidden_layers\": 5,\n",
-    "    \"n_hidden_units\": 246,\n",
-    "    \"lr\": 4.016966182320634e-05,\n",
-    "    \"weight_decay\": 9.049928486432092e-08,\n",
-    "    \"batch_size\": 8\n",
-    "    \"lambda_phy\": 5.198435302419438e-05,\n",
-    "    \"lambda_ic\": 0.008270501270326367\n",
-    "}"
    ]
   },
   {
@@ -637,7 +622,7 @@
     "# Train the model\n",
     "_, training_time, train_losses, val_losses = best_model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], \n",
     "                                                                    weight_decay=best_params[\"weight_decay\"], lambda_phy= best_params['lambda_phy'], \n",
-    "                                                                    lambda_ic= best_params['lambda_ic'],device=device, \n",
+    "                                                                    device=device, \n",
     "                                                                    idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
@@ -724,7 +709,7 @@
     }
    ],
    "source": [
-    "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
+    "# best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\"))\n",
     "best_model.eval()\n",
     "\n",
     "# Create the DataLoader for the test dataset\n",
@@ -734,7 +719,7 @@
     "df_minmax = pd.read_csv(MINMAX_PATH, sep=';')\n",
     "min_value = df_minmax[\"min\"].values\n",
     "max_value = df_minmax[\"max\"].values\n",
-    "mse, rmse, smape, inference_time = best_model.test_model(test_loader, min_value=min_value, max_value=max_value, device=\"cpu\")\n",
+    "mse, rmse, smape, inference_time = best_model.test_model(test_loader, min_value=min_value, max_value=max_value, device=device)\n",
     "\n"
    ]
   },
