finished multi city mlp PINN improvement comparison

--- a/src/run_models/run_mlp/Multi/run_mlp_pinn_threeyears_multi.ipynb
+++ b/src/run_models/run_mlp/Multi/run_mlp_pinn_threeyears_multi.ipynb
@@ -185,15 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Change this according to the data you want to use\n",
-    "YEARS = [2017, 2018, 2020, 2021, 2022, 2023]\n",
-    "TRAIN_YEARS = [2017, 2018, 2020, 2021, 2022]\n",
-    "VAL_YEARS = [2021, 2022, 2023]\n",
-    "TEST_YEARS = [2021, 2022, 2023]\n",
+    "\n",
+    "YEARS = [2017, 2018, 2020]\n",
+    "TRAIN_YEARS = [2017, 2018, 2020]\n",
+    "VAL_YEARS = [2017, 2018, 2020]\n",
+    "TEST_YEARS = [2017, 2018, 2020]\n",
     "\n",
     "LOSS_FUNC = \"PINN\"\n",
     "NN_TYPE = \"MLP\"\n",
@@ -730,7 +731,7 @@
     "# Run Optuna optimization\n",
     "study = optuna.create_study(\n",
     "    direction=\"minimize\", \n",
-    "    study_name=\"mlp_hyperparameter_optimization_PINN_multi_newpde\", \n",
+    "    study_name=\"mlp_hyperparameter_optimization_PINN_multi_first3years\", \n",
     "    storage=\"sqlite:///mlp_hyperparameter_optimization_phy_pde.db\", \n",
     "    load_if_exists=True,\n",
     "    pruner=optuna.pruners.HyperbandPruner(),\n",
@@ -835,22 +836,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_params = {\n",
-    "    \"n_hidden_layers\": 3,\n",
-    "    \"n_hidden_units\": 252,\n",
-    "    \"lr\": 4.500039019535873e-05,\n",
-    "    \"weight_decay\": 1.599161181117004e-07,\n",
-    "    \"lambda_phy\": 0.00007031291303903508,\n",
-    "    \"batch_size\": 64\n",
-    "}"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -884,8 +869,8 @@
     "                                                                    idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "print(f\"Training time: {training_time}\")\n",
     "# Save the trained model\n",
-    "# torch.save(best_model.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
-    "# print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
+    "torch.save(best_model.state_dict(), f\"{MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
+    "print(f\"Model saved as {MODEL_PATH_NAME} in Model folder\")"
    ]
   },
   {
@@ -944,6 +929,7 @@
    ],
    "source": [
     "best_model.load_state_dict(torch.load(f\"{MODEL_PATH}/{MODEL_PATH_NAME}\", map_location=device))\n",
+    "print(f\"Model loaded from {MODEL_PATH}/{MODEL_PATH_NAME}\")\n",
     "best_model.eval()\n",
     "\n",
     "# Create the DataLoader for the test dataset\n",
@@ -991,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1052,7 @@
     "plt.legend()\n",
     "plt.tight_layout()\n",
     "# Save the plot\n",
-    "# plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
+    "plt.savefig(f\"{RESULTS_PATH}/plots/{PLOT_FILENAME}\")\n",
     "plt.show()\n"
    ]
   },
