changed inf time and added std, also ran gru utrecht models

--- a/src/run_models/run_mlp/Utrecht/run_baseline_mlp_allyears.ipynb
+++ b/src/run_models/run_mlp/Utrecht/run_baseline_mlp_allyears.ipynb
@@ -459,7 +459,7 @@
     "    )\n",
     "\n",
     "    # Train and return validation loss\n",
-    "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=best_params[\"lr\"], weight_decay=best_params[\"weight_decay\"], \n",
+    "    val_loss, _, _, _ = model.train_model(train_loader, val_loader, epochs=50, lr=lr, weight_decay=weight_decay, \n",
     "                                        device=device, idx_dict= idx_dict, station_names = station_names, main_station = main_station)\n",
     "    \n",
     "    return val_loss\n",
